Remove experimental native-image-maven-plugin vanilla JVMCI support
(cherry picked from commit 1ee126205f505405c64ef9e9798efe571bf653e3)