@@ -38,9 +38,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Scanner;
-import java.util.ServiceLoader;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.execution.MavenSession;
@@ -57,20 +55,13 @@ import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
 import org.apache.maven.toolchain.ToolchainManager;
 import org.apache.maven.toolchain.java.DefaultJavaToolChain;
-import org.codehaus.plexus.archiver.tar.TarGZipUnArchiver;
-import org.codehaus.plexus.logging.AbstractLogger;
-import org.codehaus.plexus.logging.Logger;
 import org.codehaus.plexus.util.xml.Xpp3Dom;
-import org.graalvm.compiler.options.OptionDescriptor;
-import org.graalvm.compiler.options.OptionDescriptors;
-
-import com.oracle.svm.core.OS;
-import com.oracle.svm.driver.NativeImage;
-import com.oracle.svm.util.ModuleSupport;
 
 @Mojo(name = "native-image", defaultPhase = LifecyclePhase.PACKAGE)
 public class NativeImageMojo extends AbstractMojo {
-    private static final String svmGroupId = "org.graalvm.nativeimage";
+
+    private static final String NATIVE_IMAGE_META_INF = "META-INF/native-image";
+    private static final String NATIVE_IMAGE_PROPERTIES_FILENAME = "native-image.properties";
 
     @Parameter(defaultValue = "${project}", readonly = true, required = true)//
     private MavenProject project;
@@ -99,65 +90,10 @@ public class NativeImageMojo extends AbstractMojo {
     @Component
     private ToolchainManager toolchainManager;
 
-    private Logger tarGzLogger = new AbstractLogger(Logger.LEVEL_WARN, "NativeImageMojo.tarGzLogger") {
-        @Override
-        public void debug(String message, Throwable throwable) {
-            if (isDebugEnabled()) {
-                getLog().debug(message, throwable);
-            }
-        }
-
-        @Override
-        public void info(String message, Throwable throwable) {
-            if (isInfoEnabled()) {
-                getLog().info(message, throwable);
-            }
-        }
-
-        @Override
-        public void warn(String message, Throwable throwable) {
-            if (isWarnEnabled()) {
-                getLog().warn(message, throwable);
-            }
-        }
-
-        @Override
-        public void error(String message, Throwable throwable) {
-            if (isErrorEnabled()) {
-                getLog().error(message, throwable);
-            }
-        }
-
-        @Override
-        public void fatalError(String message, Throwable throwable) {
-            if (isFatalErrorEnabled()) {
-                getLog().error(message, throwable);
-            }
-        }
-
-        @Override
-        public Logger getChildLogger(String name) {
-            return this;
-        }
-    };
-
-    private final TarGZipUnArchiver tarGzExtract = new TarGZipUnArchiver();
     private final List<Path> classpath = new ArrayList<>();
 
-    NativeImageMojo() {
-        tarGzExtract.enableLogging(tarGzLogger);
-    }
-
-    private Stream<Artifact> getSelectedArtifactsStream(String groupId, String... artifactIds) {
-        return plugin.getArtifacts().stream()
-                        .filter(artifact -> artifact.getGroupId().equals(groupId))
-                        .filter(artifact -> {
-                            List<String> artifactIdsList = Arrays.asList(artifactIds);
-                            if (artifactIdsList.isEmpty()) {
-                                return true;
-                            }
-                            return artifactIdsList.contains(artifact.getArtifactId());
-                        });
+    private boolean isWindows() {
+        return System.getProperty("os.name").contains("Windows");
     }
 
     public void execute() throws MojoExecutionException {
@@ -175,96 +111,54 @@ public class NativeImageMojo extends AbstractMojo {
         addClasspath(project.getArtifact());
         String classpathStr = classpath.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator));
 
-        Path nativeImageExecutable = getMojoJavaHome().resolve("bin").resolve("native-image" + (OS.WINDOWS.isCurrent() ? ".cmd" : ""));
-        if (Files.isExecutable(nativeImageExecutable)) {
-            String nativeImageExecutableVersion = "Unknown";
-            Process versionCheckProcess = null;
-            try {
-                ProcessBuilder processBuilder = new ProcessBuilder(nativeImageExecutable.toString(), "--version");
-                versionCheckProcess = processBuilder.start();
-                try (Scanner scanner = new Scanner(versionCheckProcess.getInputStream())) {
-                    while (true) {
-                        if (scanner.findInLine("GraalVM Version ") != null) {
-                            nativeImageExecutableVersion = scanner.next();
-                            break;
-                        }
-                        if (!scanner.hasNextLine()) {
-                            break;
-                        }
-                        scanner.nextLine();
+        Path nativeImageExecutable = getMojoJavaHome().resolve("bin").resolve("native-image" + (isWindows() ? ".cmd" : ""));
+        if (!Files.isExecutable(nativeImageExecutable)) {
+            throw new MojoExecutionException("Could not find executable native-image in " + nativeImageExecutable);
+        }
+
+        String nativeImageExecutableVersion = "Unknown";
+        Process versionCheckProcess = null;
+        try {
+            ProcessBuilder processBuilder = new ProcessBuilder(nativeImageExecutable.toString(), "--version");
+            versionCheckProcess = processBuilder.start();
+            try (Scanner scanner = new Scanner(versionCheckProcess.getInputStream())) {
+                while (true) {
+                    if (scanner.findInLine("GraalVM Version ") != null) {
+                        nativeImageExecutableVersion = scanner.next();
+                        break;
                     }
-
-                    if (versionCheckProcess.waitFor() != 0) {
-                        throw new MojoExecutionException("Execution of " + String.join(" ", processBuilder.command()) + " returned non-zero result");
+                    if (!scanner.hasNextLine()) {
+                        break;
                     }
+                    scanner.nextLine();
                 }
-            } catch (IOException | InterruptedException e) {
-                throw new MojoExecutionException("Probing version info of native-image executable " + nativeImageExecutable + " failed", e);
-            }
 
-            if (!nativeImageExecutableVersion.equals(plugin.getVersion())) {
-                getLog().warn("Version mismatch between " + plugin.getArtifactId() + " (" + plugin.getVersion() + ") and native-image executable (" + nativeImageExecutableVersion + ")");
-            }
-
-            try {
-                ProcessBuilder processBuilder = new ProcessBuilder(nativeImageExecutable.toString(), "-cp", classpathStr);
-                processBuilder.command().addAll(getBuildArgs());
-                processBuilder.directory(getWorkingDirectory().toFile());
-                processBuilder.inheritIO();
-
-                String commandString = String.join(" ", processBuilder.command());
-                getLog().info("Executing: " + commandString);
-                Process imageBuildProcess = processBuilder.start();
-                if (imageBuildProcess.waitFor() != 0) {
-                    throw new MojoExecutionException("Execution of " + commandString + " returned non-zero result");
+                if (versionCheckProcess.waitFor() != 0) {
+                    throw new MojoExecutionException("Execution of " + String.join(" ", processBuilder.command()) + " returned non-zero result");
                 }
-            } catch (IOException | InterruptedException e) {
-                throw new MojoExecutionException("Building image with " + nativeImageExecutable + " failed", e);
             }
-        } else {
-            Path untarDestDirectory = getUntarDestDirectory();
-            if (!Files.isDirectory(untarDestDirectory)) {
-                try {
-                    Files.createDirectories(untarDestDirectory);
-                } catch (IOException e) {
-                    throw new MojoExecutionException("Unable to create directory " + untarDestDirectory, e);
-                }
-                plugin.getArtifacts().stream()
-                                .filter(artifact -> artifact.getGroupId().equals(svmGroupId))
-                                .filter(artifact -> artifact.getArtifactId().startsWith("svm-hosted-native-"))
-                                .forEach(artifact -> {
-                                    if (artifact.getType().equals("tar.gz")) {
-                                        tarGzExtract.setSourceFile(artifact.getFile());
-                                        tarGzExtract.setDestDirectory(untarDestDirectory.toFile());
-                                        tarGzExtract.extract();
-                                    }
-                                });
-            }
+        } catch (IOException | InterruptedException e) {
+            throw new MojoExecutionException("Probing version info of native-image executable " + nativeImageExecutable + " failed", e);
+        }
 
-            try {
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.ci", false);
-                MojoBuildConfiguration config = new MojoBuildConfiguration();
-                getLog().info("WorkingDirectory: " + config.getWorkingDirectory());
-                getLog().info("ImageClasspath: " + classpathStr);
-                getLog().info("BuildArgs: " + config.getBuildArgs());
-                if (config.useJavaModules()) {
-                    /*
-                     * Java 11+ Workaround: Ensure all OptionDescriptors exist prior to using
-                     * OptionKey.getName() in NativeImage.NativeImage(BuildConfiguration config)
-                     */
-                    ServiceLoader<OptionDescriptors> optionDescriptors = ServiceLoader.load(OptionDescriptors.class, OptionDescriptors.class.getClassLoader());
-                    for (OptionDescriptors optionDescriptor : optionDescriptors) {
-                        for (OptionDescriptor descriptor : optionDescriptor) {
-                            getLog().debug("Eager initialization of OptionDescriptor: " + descriptor.getName());
-                        }
-                    }
-                }
-                NativeImage.build(config);
-            } catch (NativeImage.NativeImageError e) {
-                throw new MojoExecutionException("Error creating native image:", e);
-            } catch (IllegalAccessError e) {
-                throw new MojoExecutionException("Image building on Java 11+ without native-image requires MAVEN_OPTS='--add-exports=java.base/jdk.internal.module=ALL-UNNAMED'", e);
+        if (!nativeImageExecutableVersion.equals(plugin.getVersion())) {
+            getLog().warn("Version mismatch between " + plugin.getArtifactId() + " (" + plugin.getVersion() + ") and native-image executable (" + nativeImageExecutableVersion + ")");
+        }
+
+        try {
+            ProcessBuilder processBuilder = new ProcessBuilder(nativeImageExecutable.toString(), "-cp", classpathStr);
+            processBuilder.command().addAll(getBuildArgs());
+            processBuilder.directory(getWorkingDirectory().toFile());
+            processBuilder.inheritIO();
+
+            String commandString = String.join(" ", processBuilder.command());
+            getLog().info("Executing: " + commandString);
+            Process imageBuildProcess = processBuilder.start();
+            if (imageBuildProcess.waitFor() != 0) {
+                throw new MojoExecutionException("Execution of " + commandString + " returned non-zero result");
             }
+        } catch (IOException | InterruptedException e) {
+            throw new MojoExecutionException("Building image with " + nativeImageExecutable + " failed", e);
         }
     }
 
@@ -282,10 +176,10 @@ public class NativeImageMojo extends AbstractMojo {
 
         URI jarFileURI = URI.create("jar:" + jarFilePath.toUri());
         try (FileSystem jarFS = FileSystems.newFileSystem(jarFileURI, Collections.emptyMap())) {
-            Path nativeImageMetaInfBase = jarFS.getPath("/" + NativeImage.nativeImageMetaInf);
+            Path nativeImageMetaInfBase = jarFS.getPath("/" + NATIVE_IMAGE_META_INF);
             if (Files.isDirectory(nativeImageMetaInfBase)) {
                 List<Path> nativeImageProperties = Files.walk(nativeImageMetaInfBase)
-                                .filter(p -> p.endsWith(NativeImage.nativeImagePropertiesFilename))
+                                .filter(p -> p.endsWith(NATIVE_IMAGE_PROPERTIES_FILENAME))
                                 .collect(Collectors.toList());
 
                 for (Path nativeImageProperty : nativeImageProperties) {
@@ -294,7 +188,7 @@ public class NativeImageMojo extends AbstractMojo {
                     valid = valid && relativeSubDir.getName(0).toString().equals(artifact.getGroupId());
                     valid = valid && relativeSubDir.getName(1).toString().equals(artifact.getArtifactId());
                     if (!valid) {
-                        String example = NativeImage.nativeImageMetaInf + "/${groupId}/${artifactId}/" + NativeImage.nativeImagePropertiesFilename;
+                        String example = NATIVE_IMAGE_META_INF + "/${groupId}/${artifactId}/" + NATIVE_IMAGE_PROPERTIES_FILENAME;
                         getLog().warn(nativeImageProperty.toUri() + " does not match recommended " + example + " layout.");
                     }
                 }
@@ -378,124 +272,5 @@ public class NativeImageMojo extends AbstractMojo {
             list.add("-H:Name=" + imageName);
         }
         return list;
-    }
-
-    private Path getUntarDestDirectory() {
-        return Paths.get(project.getBuild().getDirectory()).resolve(plugin.getArtifactId()).resolve(plugin.getVersion());
-    }
-
-    private final class MojoBuildConfiguration implements NativeImage.BuildConfiguration {
-        private final List<Path> jvmciJars;
-
-        MojoBuildConfiguration() throws MojoExecutionException {
-            if (useJavaModules()) {
-                jvmciJars = Collections.emptyList();
-            } else {
-                try {
-                    jvmciJars = Files.list(getJavaHome().resolve("lib/jvmci"))
-                            .filter(path -> {
-                                String jvmciJarCandidate = path.getFileName().toString().toLowerCase();
-                                return jvmciJarCandidate.startsWith("jvmci-") && jvmciJarCandidate.endsWith(".jar");
-                            })
-                            .collect(Collectors.toList());
-                } catch (IOException e) {
-                    throw new MojoExecutionException("JVM in " + getJavaHome() + " does not support JVMCI interface", e);
-                }
-            }
-        }
-
-        @Override
-        public Path getWorkingDirectory() {
-            return NativeImageMojo.this.getWorkingDirectory();
-        }
-
-        @Override
-        public Path getJavaHome() {
-            return getMojoJavaHome();
-        }
-
-        @Override
-        public Path getJavaExecutable() {
-            return getJavaHome().resolve("bin").resolve("java" + (OS.WINDOWS.isCurrent() ? ".exe" : ""));
-        }
-
-        private List<Path> getSelectedArtifactPaths(String groupId, String... artifactIds) {
-            return getSelectedArtifactsStream(groupId, artifactIds)
-                            .map(Artifact::getFile)
-                            .map(File::toPath)
-                            .collect(Collectors.toList());
-        }
-
-        @Override
-        public List<Path> getBuilderClasspath() {
-            List<Path> paths = new ArrayList<>();
-            if (useJavaModules()) {
-                paths.addAll(getSelectedArtifactPaths("org.graalvm.sdk", "graal-sdk"));
-                paths.addAll(getSelectedArtifactPaths("org.graalvm.compiler", "compiler"));
-            }
-            paths.addAll(getSelectedArtifactPaths(svmGroupId, "svm", "objectfile", "pointsto"));
-            return paths;
-        }
-
-        @Override
-        public List<Path> getBuilderCLibrariesPaths() {
-            return Collections.singletonList(getUntarDestDirectory());
-        }
-
-        @Override
-        public Path getBuilderInspectServerPath() {
-            return null;
-        }
-
-        @Override
-        public List<Path> getImageProvidedClasspath() {
-            return getSelectedArtifactPaths(svmGroupId, "library-support");
-        }
-
-        @Override
-        public List<Path> getBuilderJVMCIClasspath() {
-            List<Path> paths = new ArrayList<>();
-            paths.addAll(jvmciJars);
-            paths.addAll(getBuilderJVMCIClasspathAppend());
-            return paths;
-        }
-
-        @Override
-        public List<Path> getBuilderJVMCIClasspathAppend() {
-            return getSelectedArtifactPaths("org.graalvm.compiler", "compiler");
-        }
-
-        @Override
-        public List<Path> getBuilderBootClasspath() {
-            return getSelectedArtifactPaths("org.graalvm.sdk", "graal-sdk");
-        }
-
-        @Override
-        public List<Path> getBuilderModulePath() {
-            List<Path> paths = new ArrayList<>();
-            paths.addAll(getSelectedArtifactPaths("org.graalvm.sdk", "graal-sdk"));
-            paths.addAll(getSelectedArtifactPaths("org.graalvm.truffle", "truffle-api"));
-            return paths;
-        }
-
-        @Override
-        public List<Path> getBuilderUpgradeModulePath() {
-            return getSelectedArtifactPaths("org.graalvm.compiler", "compiler");
-        }
-
-        @Override
-        public List<Path> getImageClasspath() {
-            return classpath;
-        }
-
-        @Override
-        public List<String> getBuildArgs() {
-            return NativeImageMojo.this.getBuildArgs();
-        }
-
-        @Override
-        public Path getAgentJAR() {
-           return getSelectedArtifactPaths(svmGroupId, "svm").get(0);
-        }
     }
 }
